tests/machine/x/go/cast_string_to_int.go
//go:build ignore

package main

import (
	"fmt"
)

func main() {
	fmt.Println(int("1995"))
}
